WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232098
Call to [NSURL URLByAppendingPathComponent:] under NetworkSessionCocoa() may be inefficient
https://bugs.webkit.org/show_bug.cgi?id=232098
Summary
Call to [NSURL URLByAppendingPathComponent:] under NetworkSessionCocoa() may ...
Chris Dumez
Reported
2021-10-21 11:47:45 PDT
Call to [NSURL URLByAppendingPathComponent:] under NetworkSessionCocoa() may be inefficient: WebKit::RemoteNetworkingContext::ensureWebsiteDataStoreSession(WebKit::NetworkProcess&, WebKit::WebsiteDataStoreParameters&&) + 800 (WebKit + 1597076) [0x1bc5e4e94] 453 WebKit::NetworkSessionCocoa::create(WebKit::NetworkProcess&, WebKit::NetworkSessionCreationParameters&&) + 56 (WebKit + 1582260) [0x1bc5e14b4] 453 WebKit::NetworkSessionCocoa::NetworkSessionCocoa(WebKit::NetworkProcess&, WebKit::NetworkSessionCreationParameters&&) + 1420 (WebKit + 1584032) [0x1bc5e1ba0] 453 -[NSURL(NSURLPathUtilities) URLByAppendingPathComponent:] + 168 (Foundation + 223496) [0x19f511908] 453 -[NSURL getResourceValue:forKey:error:] + 120 (CoreFoundation + 449828) [0x19e651d24] 453 CFURLCopyResourcePropertyForKey + 140 (CoreFoundation + 354812) [0x19e63a9fc] 453 _FSURLCopyResourcePropertyForKeyInternal(__CFURL const*, __CFString const*, void*, void*, __CFError**, unsigned char) + 232 (CoreServicesInternal + 4296) [0x1a0fcc0c8] 453 prepareValuesForBitmap(__CFURL const*, __FileCache*, _FilePropertyBitmap*, __CFError**) + 412 (CoreServicesInternal + 16496) [0x1a0fcf070] 453 corePropertyProviderPrepareValues(__CFURL const*, __FileCache*, __CFString const* const*, void const**, long, void const*, __CFError**) + 1236 (CoreServicesInternal + 17868) [0x1a0fcf5cc] 453 parseAttributeBuffer(__CFAllocator const*, unsigned char const*, unsigned char, attrlist const*, void const*, void**, _FileAttributes*, unsigned int*) + 2944 (CoreServicesInternal + 22124) [0x1a0fd066c] 453 MountInfoPrepare + 68 (CoreServicesInternal + 23796) [0x1a0fd0cf4] 453 FSMountPrepare + 76 (CarbonCore + 31128) [0x1a0cda998]
Attachments
Patch
(2.39 KB, patch)
2021-10-21 11:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.81 KB, patch)
2021-10-21 11:52 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.67 KB, patch)
2021-10-21 12:28 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-10-21 11:49:34 PDT
Created
attachment 442053
[details]
Patch
Chris Dumez
Comment 2
2021-10-21 11:52:49 PDT
Created
attachment 442054
[details]
Patch
Chris Dumez
Comment 3
2021-10-21 12:28:46 PDT
Created
attachment 442057
[details]
Patch
EWS
Comment 4
2021-10-21 15:45:26 PDT
Committed
r284651
(
243371@main
): <
https://commits.webkit.org/243371@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442057
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-10-21 15:46:17 PDT
<
rdar://problem/84526446
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug