Call to [NSURL URLByAppendingPathComponent:] under NetworkSessionCocoa() may be inefficient https://bugs.webkit.org/show_bug.cgi?id=232098

Reviewed by Alex Christensen.

Call [NSURL URLByAppendingPathComponent:isDirectory:] whenever possible instead of
[NSURL URLByAppendingPathComponent], as it is more efficient.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
* UIProcess/Cocoa/WKShareSheet.mm:
(+[WKShareSheet createRandomSharingDirectoryForFile:]):
(+[WKShareSheet writeFileToShareableURL:data:temporaryDirectory:]):


Canonical link: https://commits.webkit.org/243371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284651 268f45cc-cd09-0410-ab3c-d52691b4dbfc